@@ -19,21 +19,24 @@ import ptolemy.kernel.util.Location;
 import ptolemy.kernel.util.NameDuplicationException;
 import ptolemy.kernel.util.NamedObj;
 
+import com.isencia.passerelle.editor.common.activator.Activator;
 import com.isencia.passerelle.editor.common.utils.EditorUtils;
 import com.isencia.passerelle.model.Flow;
+import com.isencia.passerelle.project.repository.api.MetaData;
+import com.isencia.passerelle.project.repository.api.RepositoryService;
 
 public class PaletteBuilder implements Serializable {
   public static final String UTILITIES = "com.isencia.passerelle.actor.actorgroup.utilities";
   public static final String SUBMODELS = "com.isencia.passerelle.actor.actorgroup.submodels";
   List<PaletteGroup> paletteGroups;
   List<PaletteGroup> editablePaletteGroups;
-  
+
   private Map<String, String> actorBundleMap = new HashMap<String, String>();
-  
+
   public String getBuildId(String className) {
     return actorBundleMap.get(className);
   }
-  
+
   private boolean rerender = false;
 
   public boolean isRerender() {
@@ -108,8 +111,9 @@ public class PaletteBuilder implements Serializable {
 
   public Object getIcon(String clazzName) {
     if (Flow.class.getName().equals(clazzName)) {
-      if (submodelDefinition != null)
+      if (submodelDefinition != null) {
         return submodelDefinition.getIcon();
+      }
     }
     PaletteItemDefinition itemDefinition = getPaletteItem(clazzName);
     if (itemDefinition != null) {
@@ -191,7 +195,7 @@ public class PaletteBuilder implements Serializable {
           }
           if (expandedAttribute != null) {
             try {
-              e.setExpanded(new Boolean(expandedAttribute));
+              e.setExpanded(Boolean.valueOf(expandedAttribute));
             } catch (Exception e2) {
 
             }
@@ -232,12 +236,12 @@ public class PaletteBuilder implements Serializable {
 
             Object icon = createIcon(null, iconLocationAttribute, iconAttribute, bundleId);
             if (group != null && submodels != null && submodels.getId().equals(group.getId())) {
-              submodelDefinition = new PaletteItemDefinition(icon, null, idAttribute, nameAttribute, colorAttribute, Flow.class,null);
+              submodelDefinition = new PaletteItemDefinition(icon, null, idAttribute, nameAttribute, colorAttribute, Flow.class, null);
             } else {
               final Class<?> clazz = loadClass(configurationElement, bundleId);
-              
+
               if (clazz != null && group != null) {
-                PaletteItemDefinition item = new PaletteItemDefinition(icon, group, idAttribute, nameAttribute, colorAttribute, clazz,bundleId);
+                PaletteItemDefinition item = new PaletteItemDefinition(icon, group, idAttribute, nameAttribute, colorAttribute, clazz, bundleId);
                 group.addPaletteItem(item);
                 actorBundleMap.put(clazz.getName(), bundleId);
                 paletteItemMap.put(item.getClazz().getName(), item);
@@ -249,16 +253,41 @@ public class PaletteBuilder implements Serializable {
     }
 
     try {
-      for (String actorClass : MomlClassRegistry.getAllActorClasses()) {
+      RepositoryService repositoryService = Activator.getDefault().getRepositoryService();
+      for (String actorClass : repositoryService.getAllSubmodels()) {
+        MetaData metaData = repositoryService.getSubmodelMetaData(actorClass);
+        String path = metaData != null ? metaData.getPath() : null;
 
-        SubModelPaletteItemDefinition item = addSubModel(actorClass);
-        if (submodels != null)
-          submodels.addPaletteItem(item);
+        PaletteGroup group = getPaletteGroup(actorGroups, groups, path, submodels);
+        SubModelPaletteItemDefinition item = addSubModel(submodelDefinition, group, actorClass);
+        if (group != null) {
+          group.addPaletteItem(item);
+        }
       }
     } catch (Exception e) {
-     // logError(e);
+
+      // logError(e);
     }
     return actorGroups;
+  }
+
+  public PaletteGroup getPaletteGroup(List<PaletteGroup> groups, Map<String, PaletteGroup> groupMap, String path, PaletteGroup parent) {
+    if (path == null) {
+      return parent;
+    }
+
+    String id = parent.getId() + "/" + path;
+    if (groupMap.containsKey(id)) {
+      return groupMap.get(id);
+    }
+
+    PaletteGroup paletteGroup = new PaletteGroup(id, path, parent.getId());
+    paletteGroup.setParent(parent);
+    groupMap.put(id, paletteGroup);
+    groups.add(paletteGroup);
+    parent.addChild(paletteGroup);
+    return paletteGroup;
+
   }
 
   public PaletteGroup getSubModelGroup() {
@@ -273,9 +302,17 @@ public class PaletteBuilder implements Serializable {
     return true;
   }
 
-  public SubModelPaletteItemDefinition addSubModel(String name) {
-    SubModelPaletteItemDefinition item = new SubModelPaletteItemDefinition(submodelDefinition != null ? submodelDefinition.getIcon() : null, submodels, name, name,
-        submodelDefinition != null ? submodelDefinition.getColor() : null);
+  public SubModelPaletteItemDefinition addSubModel(PaletteItemDefinition sd, PaletteGroup gr, String name) {
+    PaletteGroup group = gr;
+    PaletteItemDefinition submodelDef = sd;
+    if (submodelDef == null) {
+      submodelDef = submodelDefinition;
+    }
+    if (group == null) {
+      group = submodels;
+    }
+    SubModelPaletteItemDefinition item = new SubModelPaletteItemDefinition(submodelDef != null ? submodelDef.getIcon() : null, group, name, name,
+        submodelDef != null ? submodelDef.getColor() : null);
 
     return item;
   }
@@ -316,8 +353,9 @@ public class PaletteBuilder implements Serializable {
 
     }
     List<Attribute> attributes = model.attributeList(Locatable.class);
-    if (attributes == null)
+    if (attributes == null) {
       return;
+    }
     if (attributes.size() > 0) {
       Locatable locationAttribute = (Locatable) attributes.get(0);
       try {
